@@ -209,6 +209,7 @@ source "package/java/jamvm/Config.in"
 source "package/lua/Config.in"
 if BR2_PACKAGE_LUA
 source "package/cgilua/Config.in"
+source "package/copas/Config.in"
 source "package/coxpcall/Config.in"
 source "package/luafilesystem/Config.in"
 source "package/luasocket/Config.in"
